# telegram_payment_bot

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pyproject_legacy.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: build.yml
app/: bot.py  bot_start.py
app/conf/: config.ini  email_body.html  email_body.txt
app/lang/: lang_it.xml
telegram_payment_bot/: __init__.py  _version.py  authorized_users_getter.py  authorized_users_message_sender.py  ban_helper.py  bot_base.py  chat_members.py  command_base.py  command_data.py  command_dispatcher.py  commands.py  config.py  config_data.py  config_loader.py  google_sheet_reader.py  google_sheet_service.py  helpers.py  joined_members_checker.py  logger.py  members_kicker.py  members_payment_getter.py  members_username_getter.py  message_dispatcher.py  message_sender.py  payment_bot.py  payment_bot_config_cfg.py  payment_bot_handlers_cfg.py  payment_types.py  payments_check_job.py  payments_check_scheduler.py  payments_checker.py  payments_checker_job.py  payments_checker_task.py  payments_data.py  payments_emailer.py  payments_excel_loader.py  payments_google_sheet_loader.py  payments_loader_base.py  payments_loader_factory.py  payments_periodic_checker.py  (+10 more)
telegram_payment_bot/auth_user/: authorized_users_getter.py  authorized_users_list.py  authorized_users_message_sender.py
telegram_payment_bot/bot/: bot_base.py  bot_config.py  bot_config_cfg.py  bot_config_types.py  bot_handlers_cfg.py  bot_handlers_config.py  bot_handlers_config_typing.py
telegram_payment_bot/command/: command_base.py  command_data.py  command_dispatcher.py  commands.py
telegram_payment_bot/config/: config_file_sections_loader.py  (+5 more)
(+35 files in other folders)
